# backend/PolarDrive.Data/DTOs/ClientVehicleDTO.cs
@@ -17,5 +17,4 @@ public class ClientVehicleDTO
     public string? ReferentName { get; set; }
     public string? ReferentMobileNumber { get; set; }
     public string? ReferentEmail { get; set; }
-    public string? ReferentPecAddress { get; set; }
 }
